moved calculation to cpp, validation done, search done

--- a/assets/login.html
+++ b/assets/login.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   </head>
   <body class="light-grey" ref="login">
-    <i class="material-icons selectable--text" style="position: absolute; right: 0px; padding: 5px; font-size: 32px;" id="close" @click="winClose">close</i>
+    <i class="material-icons selectable--text" style="position: absolute; right: 0px; padding: 5px; font-size: 32px; z-index: 10;" id="close" @click="winClose">close</i>
     <div class="flexbox-column--align" style="min-height: 95vh;" id="vm">
       <!-- Title & login labels -->
       <h1 class="h-centred" style="margin: 0%; margin-left: 4.5%;">Alcolator</h1>
